<resources>
    <string name="app_name">Evil battery monitor</string>
    <string name="preference_file_key">pKey</string>
    <string name="app_title">Evil battery monitor</string>
    <string name="filter_title_evil">Evil battery monitor</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <!-- -->
    <string name="start_on_boot">Start on boot</string>
    <string name="start_on_boot_s">If on, the battery monitor will start on boot.</string>
    <string name="led_on">Use LED</string>
    <string name="led_on_s">If on, the LED will reflect with its color the charge status. Not all models support it.</string>

    <!-- Battery notification settings -->
    <string name="battery_sound">Sound settings</string>

    <!--battery notification options -->
    <string name="play_battery_full_sound">Play sound when battery full</string>
    <string name="play_battery_full_sound_s">Play sound when battery full</string>
    <string name="play_battery_empty_sound">Play sound when battery empty</string>
    <string name="play_battery_empty_sound_s">Play sound when battery empty</string>
    <string name="repeat_battery_full_sound">Repeat battery full sound</string>
    <string name="repeat_battery_full_sound_s">Repeat battery full sound</string>
    <string name="repeat_battery_empty_sound">Repeat battery empty sound</string>
    <string name="repeat_battery_empty_sound_s">Repeat battery empty sound</string>

    <!--battery full notification sound -->
    <string name="battery_full_sound">Sound when full</string>
    <string name="battery_full_sound_s">The picked sound will be played when battery full.</string>
    <!--battery empty notification sound -->
    <string name="battery_empty_sound">Sound when empty</string>
    <string name="battery_empty_sound_s">The picked sound will be played when battery full.</string>

    <!--Battery Bar Layout -->
    <string name="bar_layout">Battery Bar Layout</string>
    <string name="pref_bar_thickness">Battery bar thickness</string>
    <string name="pref_bar_thickness_s">Battery Bar Thickness</string>
    <string-array name="pref_bar_thickness_titles">
        <item>Thin</item>
        <item>Medium Thin</item>
        <item>Medium</item>
        <item>Medium Fat</item>
        <item>Fat</item>
    </string-array>
    <string-array name="pref_bar_thickness_values">
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
    </string-array>

    <!--Message attributes-->
    <!--Settings activity keyword text-->
    <string name="info_in_the_message">Notification Info Details</string>
    <string name="battery_percent">Battery percent</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_health">Battery health</string>
    <string name="battery_status">Battery status</string>
    <string name="battery_power_source">Charging source</string>
    <string name="battery_technology">Battery technology</string>
    <string name="battery_voltage">Battery voltage</string>
    <!--Settings activity summary text-->
    <string name="battery_percent_s">The actual battery percent</string>
    <string name="battery_temperature_s">The actual battery temperature in C°</string>
    <string name="battery_health_s">Battery health flag (2=OK; more info in android dok)</string>
    <string name="battery_status_s">Battery status flag (2=charging; more info in android dok)</string>
    <string name="battery_power_source_s">Power source flag (2=AC; more info in android dok)</string>
    <string name="battery_technology_s">Battery technology text (Li-Ion)</string>
    <string name="battery_voltage_s">Battery voltage in mV</string>
    <!--Settings activity notification text-->
    <string name="battery_percent_n">Battery Percent</string>
    <string name="battery_temperature_n">Battery Temperature</string>
    <string name="battery_health_n">Battery Health</string>
    <string name="battery_status_n">Battery Status</string>
    <string name="battery_power_source_n">Charging Source</string>
    <string name="battery_technology_n">Battery Technology</string>
    <string name="battery_voltage_n">Battery Voltage</string>


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
